// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders button with icon 1`] = `
.c2 {
  box-sizing: border-box;
  background: #FFF;
}

.c0 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: inherit;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover,
.c0:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

.c3 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  width: 32px;
  height: 32px;
}

.c5 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  color: inherit;
  fill: #565656;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.c4 {
  -webkit-flex: 0 0 32px;
  -ms-flex: 0 0 32px;
  flex: 0 0 32px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  min-height: 32px;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  color: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 > * {
  margin-right: 10px;
}

.c1 > *:last-child {
  margin-right: 0px;
}

<div>
  <button
    class="c0"
  >
    Welcome to React
    <div
      class="c1 c2"
    >
      <span
        class="c3"
        size="32"
      >
        <span
          class="icon c4"
          size="32"
        >
          <svg
            aria-labelledby="title"
            class="view-forward c5"
            clip-rule="evenodd"
            fill-rule="evenodd"
            preserveAspectRatio="xMidYMid meet"
            stroke-linejoin="round"
            stroke-miterlimit="1.414"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12.982,23.89c-0.354,-0.424 -0.296,-1.055 0.128,-1.408c1.645,-1.377 5.465,-4.762 6.774,-6.482c-1.331,-1.749 -5.1,-5.085 -6.774,-6.482c-0.424,-0.353 -0.482,-0.984 -0.128,-1.408c0.353,-0.425 0.984,-0.482 1.409,-0.128c1.839,1.532 5.799,4.993 7.2,6.964c0.219,0.312 0.409,0.664 0.409,1.054c0,0.39 -0.19,0.742 -0.409,1.053c-1.373,1.932 -5.399,5.462 -7.2,6.964l-0.001,0.001c-0.424,0.354 -1.055,0.296 -1.408,-0.128Z"
              />
            </g>
          </svg>
        </span>
      </span>
    </div>
  </button>
</div>
`;

exports[`<Button /> renders welcome a secondary color 1`] = `
.c0 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: inherit;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #acacac;
  border-bottom-color: #898989;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover,
.c0:focus {
  background: #898989;
  border-bottom-color: #acacac;
}

<div>
  <button
    class="c0"
  >
    Welcome to React
  </button>
</div>
`;

exports[`<Button /> renders welcome message 1`] = `
.c0 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: inherit;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover,
.c0:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

<div>
  <button
    class="c0"
  >
    Welcome to React
  </button>
</div>
`;
